# landlord

./: .gitignore  BieuDo.cc  BieuDo.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  MessageHandler.cc  MessageHandler.h  README.md  SumController.cc  SumController.h  TanController.cc  TanController.h  TestCtrl.cc  TestCtrl.h  conandata.yml  config.json  index.html  landlord.db  lease.cc  lease.h  main.cpp  rooms.cc  rooms.h  vcpkg-configuration.json  vcpkg.json
admin/: User.cc  User.h  admin_UserController.cc  admin_UserController.h
public/: app.js  bieu_do_dien.html  bieu_do_ga.html  bieu_do_thue-phong.html  bieu_do_water.html  index.html  tan.html
public/controllers/: counter_controller.js
views/: BieuDoDien.csp  BieuDoGa.csp  BieuDoThuePhong.csp  BieuDoWater.csp  DanhSachPhong.csp  Example.csp  Index.csp  RoomsList.csp  rooms_list.csp
